--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   application:
     name: covid-backend
   datasource:
-    url: jdbc:postgresql://localhost:5432/covid
+    url: jdbc:postgresql://localhost:5432/covid?
     driver-class-name: org.postgresql.Driver
     username: postgres
     password: 4869
