--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "chart.js": "^3.3.2",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-chartjs": "^3.5.1",
     "vue-router": "^3.2.0",
     "vuetify": "^2.5.1",
     "vuex": "^3.4.0",
@@ -22,7 +24,7 @@
     "@vue/cli-service": "~4.5.0",
     "axios": "^0.21.1",
     "sass": "^1.32.0",
-    "sass-loader": "^10.0.0",
+    "sass-loader": "^7.3.1",
     "vue-cli-plugin-axios": "0.0.4",
     "vue-cli-plugin-vuetify": "^2.4.0",
     "vue-template-compiler": "^2.6.11",
